--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ SECRET_KEY=super-secret-key
 ENCRYPTION_KEY=1fGTvhUxCeRjgsJFovsVEuoyKvEj0lUjGQFtE2R4G7c=
 DATABASE_URL=sqlite:///empresa.db
 ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=admin123
+ADMIN_PASSWORD=admin
 JWT_SECRET_KEY=jwt-secret-key
